samples/_failures_safe/1761552799_50c540_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0f0baae4.c: In function ‘main’:
./samples/SAFE/__tmp_0f0baae4.c:148:13: error: expected declaration or statement at end of input
  148 |             fprintf(stderr, "Error: Invalid operation selection\n");
      |             ^~~~~~~
./samples/SAFE/__tmp_0f0baae4.c:148:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0f0baae4.c:148:13: error: expected declaration or statement at end of input
